to all publish my publish to outside

--- a/jenkins_test.html
+++ b/jenkins_test.html
@@ -2,6 +2,6 @@
 <body bgcolor='aqua'>
 This is my first test file to test and understand Jenkins functionality.
 
-Thanks to Vimal sir for explaining this concenpt.
+Hello Netenrich! Hope you all doing fine. Be safe and stay at home.
 </body>
 </html>
